[build-system]
requires = ["setuptools>=42.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = "--cov=PyAltiumRun"
testpaths = [
    "tests",
]

[tool.mypy]
mypy_path = "src"
files = "src"
disallow_any_expr = false
disallow_any_decorated = true
disallow_any_generics = false
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
no_implicit_optional = false
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_return_any = true
warn_unreachable = false
disallow_redefinition = true
strict_equality = true
show_error_context = true
show_error_codes = true
pretty = true
color_output = true
html_report = true
linecount_report = true
warn_unused_configs = true
no_implicit_reexport = true