[metadata]
name = PyAltiumRun
version = 0.0.1
description = A library that can run scripts in altium designer
author = Dylan Gybels
author_email = dylangybels@gmail.com
url = https://github.com/krakdustten/PyAltiumRun
download_url =
keywords =
    Altium
    Scripting
    Runner
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
include_package_data = True
packages =
    PyAltiumRun
python_requires = >=3.6
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
* = *.pas
PyAltiumRun = py.typed

[flake8]
max-line-length = 160
count = True
ignore =
indent-size = 4
statistics = True
doctests = True